@@ -26,13 +26,12 @@ else
   DEBUGFLAG=-Wall
 endif
 
-CPPFLAGS=$(PKG_CPPFLAGS) -I$(RHOME)/src/include
-# -include $(RHOME)/src/include/globalvar.h 
+CPPFLAGS=$(PKG_CPPFLAGS) -I$(RHOME)/include
 CFLAGS=$(CPPFLAGS) $(DEBUGFLAG) -O2 $(PKG_CFLAGS)
 CXXFLAGS=$(CPPFLAGS) $(DEBUGFLAG) -O2 $(PKG_CXXFLAGS)
 FFLAGS=-O2 $(DEBUGFLAG) $(PKG_FFLAGS)
 DLLLIBS=-L$(RHOME)/src/gnuwin32 $(PKG_LIBS) $(FLIBS) -lR 
-RESFLAGS=--include-dir $(RHOME)/src/include
+RESFLAGS=--include-dir $(RHOME)/include
 BLAS_LIBS=-lRblas
 LAPACK_LIBS=-L$(RHOME)/lib -lRlapack
 # for use by Makevars.win
@@ -58,7 +57,7 @@ libR:
 $(DLLNAME)_res.rc:
 	@PERL5LIB=$(RHOME)/share/perl perl $(RHOME)/src/gnuwin32/makeDllRes.pl $(DLLNAME) > $@
 
-$(DLLNAME)_res.o: $(DLLNAME)_res.rc $(RHOME)/src/include/Rversion.h
+$(DLLNAME)_res.o: $(DLLNAME)_res.rc $(RHOME)/include/Rversion.h
 
 $(DLLNAME).a: $(OBJS)
 	@$(RM) -f $@
