@@ -22,12 +22,12 @@ tk$(TCL_VERSION).def: tk.def
 
 
 OBJS = init.o tcltk.o tcltk_win.o
-CFLAGS = -I$(RHOME)/src/include $(DEBUGFLAG) -O2 -I "$(TCL_HOME)"/include -DWin32
+CFLAGS = -I$(RHOME)/include $(DEBUGFLAG) -O2 -I "$(TCL_HOME)"/include -DWin32
 
 DLLLIBS = -L$(RHOME)/src/gnuwin32 -lR -L. -ltcl$(TCL_VERSION) -ltk$(TCL_VERSION)
 
-RESFLAGS=--include-dir $(RHOME)/src/include
-tcltk_res.o: tcltk_res.rc $(RHOME)/src/include/Rversion.h
+RESFLAGS=--include-dir $(RHOME)/include
+tcltk_res.o: tcltk_res.rc $(RHOME)/include/Rversion.h
 
 $(DLLNAME).a: $(OBJS) #
 	$(RM) -f $@
